-Updated IdentFilePostLoadAction with genome annotation specific code. -Updated LogPane to read standard output and error output of external tasks in separate threads. -Invisible tasks will not be shown in the tasks table. -Converted a few try statements to try-with-resources. -Used ProcessBuilder in place of Runtime.exec. -Switched order of genome annotation finished popup and loading of mzid file. -Events on invisible tasks do not cause a TasksTab refresh. -Created a trivialService executor.