@@ -36,10 +36,10 @@ import org.proteosuite.utils.StringUtils;
 public class SearchGuiViaMzidLibWrapper implements SearchEngine {
 
     private boolean genomeAnnotation = false;
-    private List<String> commandList;
-    private BufferedReader reader;
+    private List<String> commandList; 
+    
     private Set<MascotGenericFormatFile> rawData;
-    private AnalyseData data = AnalyseData.getInstance();
+    private final AnalyseData data = AnalyseData.getInstance();
     private String prefix = null;
 
     public SearchGuiViaMzidLibWrapper(Set<MascotGenericFormatFile> inputSpectra, String databasePath, Map<String, String> searchParameters) {
@@ -57,7 +57,8 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
         commandList.add("-jar");
 
         String jarLocation = getMzIdLibJar().getAbsolutePath();
-        commandList.add(jarLocation.contains(" ") ? "\"" + jarLocation + "\"" : jarLocation);
+        //commandList.add(jarLocation.contains(" ") ? "\"" + jarLocation + "\"" : jarLocation);
+        commandList.add(jarLocation);
         commandList.add("ProteoAnnotator");
         commandList.add("-inputGFF");
         commandList.add(geneModel[0]);
@@ -69,7 +70,7 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
         if (!otherModels.isEmpty()) {
             commandList.add("-inputPredicted");
             StringBuilder otherModelBuilder = new StringBuilder();
-            otherModelBuilder.append("\"");
+            //otherModelBuilder.append("\"");
             Iterator<Entry<String, String>> iterator = otherModels.entrySet().iterator();
             while (iterator.hasNext()) {
                 Entry<String, String> model = iterator.next();
@@ -84,7 +85,7 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
                 }
             }
 
-            otherModelBuilder.append("\"");
+            //otherModelBuilder.append("\"");
             commandList.add(otherModelBuilder.toString());
         }
 
@@ -134,9 +135,9 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
         File temporaryFile = null;
         try {
             temporaryFile = File.createTempFile("proteosuite_searchGUI_settings_", null);
-            BufferedWriter writer = new BufferedWriter(new FileWriter(temporaryFile));
-            writer.write(parametersBuilder.toString() + "\n");
-            writer.close();
+            try (BufferedWriter writer = new BufferedWriter(new FileWriter(temporaryFile))) {
+                writer.write(parametersBuilder.toString() + "\n");
+            }
         } catch (IOException ex) {
             System.out.println(ex.getLocalizedMessage());
             temporaryFile = null;
@@ -151,7 +152,7 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
 
         task.addAsynchronousProcessingAction(new ProteoSuiteAction<Object, BackgroundTaskSubject>() {
             @Override
-            public Object act(BackgroundTaskSubject ignored) {
+            public Integer act(BackgroundTaskSubject ignored) {
                 try {
                     MascotGenericFormatFile mgf = rawData.iterator().next();
                     if (rawData.size() > 1) {
@@ -163,44 +164,34 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
                     }
 
                     commandList.add("-outputFolder");
-                    commandList.add(mgf.getFile().getParentFile().getAbsolutePath() + File.separator + "annotation_output");
-                    String executionString = StringUtils.join(" ", commandList);
-                    System.out.println("Execution String: " + executionString);
-                    Process process = Runtime.getRuntime().exec(executionString);
+                    commandList.add(mgf.getFile().getParentFile().getAbsolutePath() + File.separator + "annotation_output");                    
+                    System.out.println("Execution String: " + StringUtils.join(" ", commandList));                   
+                    
+                    ProcessBuilder builder = new ProcessBuilder(commandList);
+                    Process proc = builder.start();                   
+                    
                     Log log = new Log();
-                    log.setErrorOutput(new BufferedReader(new InputStreamReader(process.getErrorStream())));
-                    log.setStandardOutput(new BufferedReader(new InputStreamReader(process.getInputStream())));
-                    data.getLogs().add(log);
-
-                    return process.waitFor();
+                    log.setErrorOutput(new BufferedReader(new InputStreamReader(proc.getErrorStream())));
+                    log.setStandardOutput(new BufferedReader(new InputStreamReader(proc.getInputStream())));
+                    data.getLogs().add(log);                   
+                    return proc.waitFor();
                 } catch (IOException | InterruptedException ex) {
                     Logger.getLogger(SearchGuiViaMzidLibWrapper.class.getName()).log(Level.SEVERE, null, ex);
                 }
 
-                return -1;
+                return null;
             }
         });
 
-        task.addCompletionAction(new ProteoSuiteAction<Void, Void>() {
+        task.addCompletionAction(new ProteoSuiteAction<Object, BackgroundTaskSubject>() {
             @Override
-            public Void act(Void argument) {
+            public Void act(BackgroundTaskSubject argument) {
                 AnalyseDynamicTab.getInstance().getAnalyseStatusPanel()
                         .setIdentificationsDone();
 
                 AnalyseDynamicTab.getInstance().getAnalyseStatusPanel()
                         .setResultsDone();
-
-                JOptionPane
-                        .showConfirmDialog(
-                                AnalyseDynamicTab.getInstance(),
-                                "Your genome annotation run has finished and your result files are now available.\n"
-                                + "Please check the \"annotation_output\" folder where your raw data was situated.\n"
-                                + "The mzID output file from the pipeline is currently loading in the background and should be available for viewing in the Inspect tab soon.\n"
-                                + "Check the output folder for various CSV files and multiple annotated GFF files.\n"
-                                + "Also check the \"ProteoAnnotator.txt\" file for any error messages and a log of the run.",
-                                "Genome Annotation Completed", JOptionPane.PLAIN_MESSAGE,
-                                JOptionPane.INFORMATION_MESSAGE);
-
+                
                 String outputMzid = rawData.iterator().next().getFile().getParentFile().getAbsolutePath()
                         + File.separator + "annotation_output" + File.separator
                         + prefix
@@ -211,13 +202,24 @@ public class SearchGuiViaMzidLibWrapper implements SearchEngine {
                     data.getInspectModel().addIdentDataFile(new MzIdentMLFile(mzidFile, null));
                 }
 
+                JOptionPane
+                        .showConfirmDialog(
+                                AnalyseDynamicTab.getInstance(),
+                                "Your genome annotation run has finished and your result files are now available.\n"
+                                + "Please check the \"annotation_output\" folder where your raw data was situated.\n"
+                                + "The mzID output file from the pipeline is currently loading in the background and should be available for viewing in the Inspect tab soon.\n"
+                                + "Check the output folder for various CSV files and multiple annotated GFF files.\n"
+                                + "Also check the \"ProteoAnnotator.txt\" file for any error messages and a log of the run.",
+                                "Genome Annotation Completed", JOptionPane.PLAIN_MESSAGE,
+                                JOptionPane.INFORMATION_MESSAGE);               
+
                 return null;
             }
         });
 
-        task.addCompletionAction(new ProteoSuiteAction<Void, Void>() {
+        task.addCompletionAction(new ProteoSuiteAction<Object, BackgroundTaskSubject>() {
             @Override
-            public Void act(Void argument) {
+            public Void act(BackgroundTaskSubject argument) {
                 System.out.println("Genome annotation done.");
                 return null;
             }
